--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -2,7 +2,7 @@ with-expecter: True
 inpackage: True
 dir: mocks/{{ replaceAll .InterfaceDirRelative "internal" "internal_" }} 
 mockname: "{{.InterfaceName}}"
-outpkg: "{{.PackageName}}"
+outpkg: "mocks"
 filename: "{{.InterfaceName}}.go"
 all: True
 packages:
